--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -133,7 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\OpenGL\glad.c" />
-    <ClCompile Include="Project2.cpp" />
+    <ClCompile Include="chapter5.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
